hnc/tenant-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  namespace: tenant-namespace-b
spec:
  replicas: 5
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: dpaalh/authentication:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant
  namespace: tenant-namespace-b
spec:
  replicas: 5
  selector:
    matchLabels:
      app: tenant
  template:
    metadata:
      labels:
        app: tenant
    spec:
      containers:
        - name: tenant
          image: dpaalh/tenant:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: tenant-namespace-b
spec:
  replicas: 5
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: dpaalh/order:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: tenant-namespace-b
spec:
  replicas: 5
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: dpaalh/product:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist
  namespace: tenant-namespace-b
spec:
  replicas: 5
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      labels:
        app: wishlist
    spec:
      containers:
        - name: wishlist
          image: dpaalh/wishlist:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "150m"
