hnc/tenant-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
  namespace: tenant-namespace-b
spec:
  type: NodePort
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 32080

---
apiVersion: v1
kind: Service
metadata:
  name: tenant
  namespace: tenant-namespace-b
spec:
  type: NodePort
  selector:
    app: tenant
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 32081
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: tenant-namespace-b
spec:
  type: NodePort
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 32082

---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: tenant-namespace-b
spec:
  type: NodePort
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
      nodePort: 32083

---
apiVersion: v1
kind: Service
metadata:
  name: wishlist
  namespace: tenant-namespace-b
spec:
  type: NodePort
  selector:
    app: wishlist
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
      nodePort: 32084
